# CLI-Matchups

./: .gitignore  README.md  client.py  mass_register.py  requirements.txt  server.py  test.txt
client/: Cargo.toml  client.py  matching.py
client/src/: main.rs
server/: get_matches.py  login.py  matching.py  registration.py  server.py  utils.py
