[package]
name = "client"
version = "0.1.0"
authors = ["thenamesweretakenalready <43702423+thenamesweretakenalready@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.3.0"
reqwest = { version = "0.11.2", features = ["json"] }
json = "0.12.4"
